--- a/Index.html
+++ b/Index.html
@@ -109,6 +109,31 @@
                     </div>
                 </div>
             </div>
+             <!------------Contact------------------>
+            <div id="contact">
+                <div class="container">
+                    <div class="row">
+                        <div class="contact-left">
+                            <h1 class="text">Contact Me</h1>
+                            <p><i class="fa-solid fa-envelope"></i>Email: 1234@gmail.com</p>
+                            <p><i class="fa-solid fa-phone"></i>Phone Number: 0123456789</p>
+                            <div class="social-icon"> <!--Add link sau-->
+                                <a href=""><i class="fa-brands fa-facebook"></i></a>
+                                <a href=""><i class="fa-brands fa-twitter"></i></a>
+                                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                            </div>
+                        </div>
+                        <div class="contact-right"> <!--Tao form de nguoi dung add info vao-->
+                            <form>
+                                <input type="text" name="Name" placeholder="Your Name" required>
+                                <input type="email" name="Email" placeholder="Your Email" required>
+                                <textarea name="Message" row="6" placeholder="Your Message"></textarea>
+                                <button type="submit" class="btn">Submit</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <a href="#" class="back-to-top">
                 <span class="material-icons">arrow_upward</span>
             </a>
