--- a/Index.html
+++ b/Index.html
@@ -46,7 +46,7 @@
                         <div class="about-2">
                             <h1 class="text">About Me</h1>
                             <p>Write something...</p>
-                            <a href = '#' class="btn">My CV</a>
+                            <a href = '#' class="btn">My CV</a> <!--Co the nhet cv (file pdf ) vao a href de co the download khi bam vao-->
                         </div>
                     </div>
                 </div>
@@ -128,10 +128,13 @@
                                 <input type="text" name="Name" placeholder="Your Name" required>
                                 <input type="email" name="Email" placeholder="Your Email" required>
                                 <textarea name="Message" row="6" placeholder="Your Message"></textarea>
-                                <button type="submit" class="btn">Submit</button>
+                                <button type="submit" class=" submit">Submit</button>
                             </form>
                         </div>
                     </div>
+                </div>
+                <div class="copyright">
+                    <p>Made by Ngoc Huy Duong. First practice product <i class="fa-solid fa-heart"></i></p>
                 </div>
             </div>
             <a href="#" class="back-to-top">
@@ -139,3 +142,6 @@
             </a>
         </body>
 </html>
+
+
+
