--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Hi I Am Meo</title>
-        <link rel="icon" href="icons/black-cat.png" type="image/x-icon"
+        <link rel="icon" href="icons/icon.png" type="image/x-icon"
             title="black cat stickers">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -149,7 +149,7 @@
                 }
             
                 function menuclose() {
-                    sidemenu.style.right = "-200px"; // Set the correct value for closing the menu
+                    sidemenu.style.right = "-200px"; 
                 }
             </script>
             
