--- a/Index.html
+++ b/Index.html
@@ -25,10 +25,10 @@
                             <li><a href="#">About</a></li>
                             <li><a href="#">Skills</a></li>
                             <li><a href="#">Experiences</a></li>
-                            <li><a href="#">Contact Info</a></li>
-                            <i class="fas fa-xmark" onclick="menuclose()"></i>
+                            <li><a href="#">Contact Info</a></li> 
+                            <i class="fa-solid fa-xmark" onclick="menuclose()"></i>
                         </ul>
-                        <i class="fas fa-bars " onclick="openmenu()"></i>
+                        <i class="fa-solid fa-bars" onclick="openmenu()"></i>
                     </nav>
                     <div class="header-text">
                         <p>Master Degree</p>
