--- a/Index.html
+++ b/Index.html
@@ -146,11 +146,11 @@
                 var sidemenu = document.getElementById("sidemenu");
             
                 function openmenu() {
-                    sidemenu.style.right = "0";
+                    sidemenu.style.left = "0";
                 }
             
                 function menuclose() {
-                    sidemenu.style.right = "-200px"; 
+                    sidemenu.style.left = "-200px"; 
                 }
             </script>
             <!--Js dùng để khi nhập thông tin từ form sẽ lưu thông tin vào google sheet-->
