--- a/Index.html
+++ b/Index.html
@@ -2,91 +2,325 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width-device-width, initial-scale=1.0">
-    <!--ICONS (From FontAwesome)-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style/styles.css">
-    <title>Personal Portfolio Website</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- --------- UNICONS ---------- -->
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
+
+    <!-- --------- CSS ---------- -->
+    <link rel="stylesheet" href="assets/css/style.css">
+
+    <!-- --------- FAVICON ---------- -->
+    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
+
+    <title>Portfolio | Ludiflex</title>
 </head>
 <body>
-    <!--HEADER-->
-    <head class="header">
-        <a href="#" class="logo">Portfolio</a>
+   <div class="container">
+    <!-- --------------- HEADER --------------- -->
+      <nav id="header">
+        <div class="nav-logo">
+            <p class="nav-name">Doe</p>
+            <span>.</span>
+        </div>
+        <div class="nav-menu" id="myNavMenu">
+            <ul class="nav_menu_list">
+                <li class="nav_list">
+                    <a href="#home" class="nav-link active-link">Home</a>
+                    <div class="circle"></div>
+                </li>
+                <li class="nav_list">
+                    <a href="#about" class="nav-link">About</a>
+                    <div class="circle"></div>
+                </li>
+                <li class="nav_list">
+                    <a href="#projects" class="nav-link">Projects</a>
+                    <div class="circle"></div>
+                </li>
+                <li class="nav_list">
+                    <a href="#contact" class="nav-link">Contact</a>
+                    <div class="circle"></div>
+                </li>
+            </ul>
+        </div>
+        <div class="nav-button">
+            <button class="btn">Download CV <i class="uil uil-file-alt"></i></button>
+        </div>
+        <div class="nav-menu-btn">
+            <i class="uil uil-bars" onclick="myMenuFunction()"></i>
+        </div>
+      </nav>
 
-        <i class="fa-solid fa-bars" id="menu-icon"></i>
 
-        <nav class="navbar">
-            <a href ="#home" class="active">Home</a>
-            <a href ="#about">About</a>
-            <a href ="#skills">Skills</a>
-            <a href ="#personal">Personal Projects</a>
-            <a href ="#contact">Contact</a>
-        </nav>
-    </head>
-
-    <!--HOME SECTION-->
-    <section class="home" id="home">
-        <div class="home-content">
-            <h3>Hi, Myself</h3>
-            <h3>Ngoc Huy Duong</h3>
-            <h3>And I'm a <span> Software Development Student </span></h3>
-            <p> <!--Add the text later--> </p>
-            <div class="social-media">
-                <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#"><i class="fa-brands fa-discord"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+    <!-- -------------- MAIN ---------------- -->
+    <main class="wrapper">
+       <!-- -------------- FEATURED BOX ---------------- -->
+       <section class="featured-box" id="home">
+          <div class="featured-text">
+            <div class="featured-text-card">
+                <span>John Doe</span>
             </div>
-            <a href="#" class="btn">Download CV</a>
-        </div>
-
-        <div class="home-img">
-            <img src="images/face.png" alt="">
-        </div>
-    </section>
-
-    <!--ABOUT SECTION-->
-    <section class="about" id="about">
-        <div class="about-img">
-            <img src="img/aboutpic.png" alt="">
-        </div>
-
-        <div class="about-content">
-            <h2 class="heading">About <span>Me</span></h2>
-            <h3>Software Developer</h3>
-            <p><!--Add Text Later--></p>
-            <a href="#" class="btn">Read More</a>
-        </div>
-    </section>
-
-    <!--SKILLS SECTION-->
-    <section class="skills" id="skills">
-        <h2 class="heading">My <span>Skills</span></h2>
-
-        <div class="skills-container">
-            <div class="skills-box"> 
-                <i class="fa-solid fa-code"></i>
-                <h3>Web Development</h3>
-                <h><!--Add text later--></h>
-                <a href="#" class="btn"> Read More </a>
+            <div class="featured-name">
+                <p>I'm <span class="typedText"></span></p>
             </div>
-
-            <div class="skills-box"> 
-                <i class="fa-solid fa-palette"></i>
-                <h3>UI/US Designing</h3>
-                <h><!--Add text later--></h>
-                <a href="#" class="btn"> Read More </a>
+            <div class="featured-text-info">
+                <p>Experienced frontend developer with a passion for creating visually stunning
+                   and user-friendly websites.
+                </p>
             </div>
-
-            <div class="skills-box"> 
-                <i class="fa-solid fa-gear"></i>
-                <h3>Backend Development</h3>
-                <h><!--Add text later--></h>
-                <a href="#" class="btn"> Read More </a>
+            <div class="featured-text-btn">
+                <button class="btn blue-btn">Hire Me</button>
+                <button class="btn">Download CV <i class="uil uil-file-alt"></i></button>
             </div>
+            <div class="social_icons">
+                <div class="icon"><i class="uil uil-instagram"></i></div>
+                <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
+                <div class="icon"><i class="uil uil-dribbble"></i></div>
+                <div class="icon"><i class="uil uil-github-alt"></i></div>
+            </div>
+          </div>
+          <div class="featured-image">
+            <div class="image">
+                <img src="assets/images/avatar.png" alt="avatar">
+            </div>
+          </div>
+          
+       </section>
+       <!-- -------------- ABOUT BOX ---------------- -->
+       <section class="section" id="about">
+          <div class="top-header">
+            <h1>About Me</h1>
+          </div>
+          <div class="about-section">
+            <div class="about-info">
+                <h3>My introduction</h3>
+                <p>I am well-versed in HTML, CSS and JavaScript , and other cutting edge
+                   frameworks and libraries,which allows me to implement interactive features.
+                   Additionally, I have experirence working with content management systems (CMS) like
+                   WordPress.
+                </p>
+                <div class="about-btn">
+                    <button class="btn">Download CV <i class="uil uil-import"></i></button>
+                </div>
+            </div>
+            <div class="skills-section">
+                <div class="skills-box">
+                    <div class="skills-header">
+                        <h3>Frontend</h3>
+                    </div>
+                    <div class="skills-list">
+                        <span>HTML</span>
+                        <span>CSS</span>
+                        <span>Bootstrap</span>
+                        <span>JavaScript</span>
+                        <span>Vue</span>
+                        <span>React</span>
+                        <span>Angular</span>
+                    </div>
+                </div>
+                <div class="skills-box">
+                    <div class="skills-header">
+                        <h3>Backend</h3>
+                    </div>
+                    <div class="skills-list">
+                        <span>PHP</span>
+                        <span>JAVA</span>
+                        <span>Python</span>
+                        <span>C++</span>
+                    </div>
+                </div>
+                <div class="skills-box">
+                    <div class="skills-header">
+                        <h3>Database</h3>
+                    </div>
+                    <div class="skills-list">
+                        <span>MySQL</span>
+                        <span>PostgreSQL</span>
+                        <span>MongoDB</span>
+                    </div>
+                </div>
+            </div>
+          </div>
+       </section>
+
+       <!-- -------------- TIMELINE & EXPERIENCE ---------------- -->
+       <section class="section" id="experience">
+         <div class="top-header">
+           <h1>Timeline & Experience</h1>
+         </div>
+         <div class="timeline-container">
+           <div class="timeline-item">
+             <div class="timeline-dot"></div>
+             <div class="timeline-date">2023 - Present</div>
+             <div class="timeline-content">
+               <h3>Senior Frontend Developer</h3>
+               <span>Awesome Tech Inc.</span>
+               <p>Leading the frontend team to build scalable web applications using modern frameworks and best practices.</p>
+             </div>
+           </div>
+           <div class="timeline-item">
+             <div class="timeline-dot"></div>
+             <div class="timeline-date">2021 - 2023</div>
+             <div class="timeline-content">
+               <h3>Frontend Developer</h3>
+               <span>Creative Studio</span>
+               <p>Developed interactive websites and collaborated with designers to deliver engaging user experiences.</p>
+             </div>
+           </div>
+           <div class="timeline-item">
+             <div class="timeline-dot"></div>
+             <div class="timeline-date">2019 - 2021</div>
+             <div class="timeline-content">
+               <h3>Junior Web Developer</h3>
+               <span>Startup Hub</span>
+               <p>Worked on various client projects, focusing on responsive design and performance optimization.</p>
+             </div>
+           </div>
+           <div class="timeline-item">
+             <div class="timeline-dot"></div>
+             <div class="timeline-date">2017 - 2019</div>
+             <div class="timeline-content">
+               <h3>Intern Web Developer</h3>
+               <span>Web Solutions</span>
+               <p>Assisted in building and maintaining websites, learning the fundamentals of web development.</p>
+             </div>
+           </div>
+         </div>
+       </section>
+
+       <!-- -------------- PROJECT BOX ---------------- -->
+
+       <section class="section" id="projects">
+          <div class="top-header">
+              <h1>Projects</h1>
+          </div>
+          <div class="project-container">
+            <div class="project-card">
+                <img src="https://via.placeholder.com/400x200?text=Portfolio+1" alt="Portfolio 1 Screenshot" class="project-img">
+                <div class="project-content">
+                  <div class="project-header">
+                    <h3>Portfolio-1</h3>
+                    <span>August 2023</span>
+                  </div>
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit autem soluta consequatur, sequi et sint laudantium non rem veritatis.</p>
+                  <a href="#" class="btn project-btn">View Live Demo</a>
+                </div>
+            </div>
+            <div class="project-card">
+                <img src="https://via.placeholder.com/400x200?text=Portfolio+2" alt="Portfolio 2 Screenshot" class="project-img">
+                <div class="project-content">
+                  <div class="project-header">
+                    <h3>Portfolio-2</h3>
+                    <span>August 2023</span>
+                  </div>
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit autem soluta consequatur, sequi et sint laudantium non rem veritatis.</p>
+                  <a href="#" class="btn project-btn">View Live Demo</a>
+                </div>
+            </div>
+            <div class="project-card">
+                <img src="https://via.placeholder.com/400x200?text=Portfolio+3" alt="Portfolio 3 Screenshot" class="project-img">
+                <div class="project-content">
+                  <div class="project-header">
+                    <h3>Portfolio-3</h3>
+                    <span>August 2023</span>
+                  </div>
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit autem soluta consequatur, sequi et sint laudantium non rem veritatis.</p>
+                  <a href="#" class="btn project-btn">View Live Demo</a>
+                </div>
+            </div>
+            <div class="project-card">
+                <img src="https://via.placeholder.com/400x200?text=Portfolio+4" alt="Portfolio 4 Screenshot" class="project-img">
+                <div class="project-content">
+                  <div class="project-header">
+                    <h3>Portfolio-4</h3>
+                    <span>August 2023</span>
+                  </div>
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit autem soluta consequatur, sequi et sint laudantium non rem veritatis.</p>
+                  <a href="#" class="btn project-btn">View Live Demo</a>
+                </div>
+            </div>
+          </div>
+       </section>
+
+       <!-- -------------- CONTACT BOX ---------------- -->
+
+       <section class="section" id="contact">
+          <div class="top-header">
+            <h1>Get in touch</h1>
+            <span>Do you have a project in your mind, contact me here</span>
+          </div>
+          <div class="row">
+             <div class="col">
+                <div class="contact-info">
+                    <h2>Find Me <i class="uil uil-corner-right-down"></i></h2>
+                    <p><i class="uil uil-envelope"></i> Email: john@doe.com</p>
+                    <p><i class="uil uil-phone"></i> Tel: +250 708 770 000</p>
+                </div>
+             </div>
+             <div class="col">
+                <div class="form-control">
+                    <div class="form-inputs">
+                        <input type="text" class="input-field" placeholder="Name">
+                        <input type="text" class="input-field" placeholder="Email">
+                    </div>
+                    <div class="text-area">
+                        <textarea placeholder="Message"></textarea>
+                    </div>
+                    <div class="form-button">
+                        <button class="btn">Send <i class="uil uil-message"></i></button>
+                    </div>
+                </div>
+             </div>
+          </div>
+       </section>
+
+    </main>
+
+
+    <!-- --------------- FOOTER --------------- -->
+    <footer>
+        <div class="top-footer">
+            <p>John Doe .</p>
         </div>
-    </section>
+        <div class="middle-footer">
+            <ul class="footer-menu">
+                <li class="footer_menu_list">
+                    <a href="#home">Home</a>
+                </li>
+                <li class="footer_menu_list">
+                    <a href="#about">About</a>
+                </li>
+                <li class="footer_menu_list">
+                    <a href="#projects">Projects</a>
+                </li>
+                <li class="footer_menu_list">
+                    <a href="#contact">Contact</a>
+                </li>
+            </ul>
+        </div>
+        <div class="footer-social-icons">
+            <div class="icon"><i class="uil uil-instagram"></i></div>
+            <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
+            <div class="icon"><i class="uil uil-dribbble"></i></div>
+            <div class="icon"><i class="uil uil-github-alt"></i></div>
+        </div>
+        <div class="bottom-footer">
+            <p>Copyright &copy; <a href="#home" style="text-decoration: none;">John Doe</a> - All rights reserved</p>
+        </div>
+    </footer>
 
-    <script src="js/main.js"></script>
+    </div>
+
+
+
+
+    <!-- ----- TYPING JS Link ----- -->
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+
+       <!-- ----- SCROLL REVEAL JS Link----- -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+    <!-- ----- MAIN JS ----- -->
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
