finish the website

--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
     <!-- --------------- HEADER --------------- -->
       <nav id="header">
         <div class="nav-logo">
-            <p class="nav-name">Doe</p>
+            <p class="nav-name">Huy Duong</p>
             <span>.</span>
         </div>
         <div class="nav-menu" id="myNavMenu">
@@ -44,7 +44,7 @@
             </ul>
         </div>
         <div class="nav-button">
-            <button class="btn">Download CV <i class="uil uil-file-alt"></i></button>
+            <a href="assets/Resume.pdf" class="btn" download>Download CV <i class="uil uil-file-alt"></i></a>
         </div>
         <div class="nav-menu-btn">
             <i class="uil uil-bars" onclick="myMenuFunction()"></i>
@@ -58,25 +58,23 @@
        <section class="featured-box" id="home">
           <div class="featured-text">
             <div class="featured-text-card">
-                <span>John Doe</span>
+                <span>Huy Duong</span>
             </div>
             <div class="featured-name">
-                <p>I'm <span class="typedText"></span></p>
+                <p>I'm a second-year student and <span class="typedText"></span></p>
             </div>
             <div class="featured-text-info">
-                <p>Experienced frontend developer with a passion for creating visually stunning
-                   and user-friendly websites.
-                </p>
+                <p>I'm a passionate second-year computer science student with a strong interest in web development, modern technologies, and API integration. I enjoy building interactive, user-friendly websites and applications using tools like FastAPI, NewsAPI, and GeminiAPI. I'm always eager to learn and take on new challenges.</p>
             </div>
             <div class="featured-text-btn">
                 <button class="btn blue-btn">Hire Me</button>
-                <button class="btn">Download CV <i class="uil uil-file-alt"></i></button>
+                <a href="assets/Resume.pdf" class="btn" download>Download CV <i class="uil uil-file-alt"></i></a>
             </div>
             <div class="social_icons">
-                <div class="icon"><i class="uil uil-instagram"></i></div>
-                <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
-                <div class="icon"><i class="uil uil-dribbble"></i></div>
-                <div class="icon"><i class="uil uil-github-alt"></i></div>
+                <a href="https://www.linkedin.com/in/ngoc-huy-duong-b395902a9/" class="icon" target="_blank" rel="noopener"><i class="uil uil-linkedin-alt"></i></a>
+                <a href="https://github.com/HuyNgocDuong" class="icon" target="_blank" rel="noopener"><i class="uil uil-github-alt"></i></a>
+                <a href="https://discord.com/users/805994639348990003" class="icon" target="_blank" rel="noopener"><i class="uil uil-discord"></i></a>
+                <a href="https://www.facebook.com/ngoc.huy.duong.402989" class="icon" target="_blank" rel="noopener"><i class="uil uil-facebook-f"></i></a>
             </div>
           </div>
           <div class="featured-image">
@@ -94,13 +92,9 @@
           <div class="about-section">
             <div class="about-info">
                 <h3>My introduction</h3>
-                <p>I am well-versed in HTML, CSS and JavaScript , and other cutting edge
-                   frameworks and libraries,which allows me to implement interactive features.
-                   Additionally, I have experirence working with content management systems (CMS) like
-                   WordPress.
-                </p>
+                <p>I am currently a second-year computer science student with hands-on experience in HTML, CSS, JavaScript, and popular frameworks. I enjoy working with APIs such as FastAPI, NewsAPI, and GeminiAPI to build dynamic and interactive applications. I love exploring new technologies and applying my skills to real-world projects. My journey so far has helped me develop a solid foundation in both frontend and backend development, and I am excited to continue growing as a developer.</p>
                 <div class="about-btn">
-                    <button class="btn">Download CV <i class="uil uil-import"></i></button>
+                    <a href="assets/Resume.pdf" class="btn" download>Download CV <i class="uil uil-import"></i></a>
                 </div>
             </div>
             <div class="skills-section">
@@ -115,7 +109,6 @@
                         <span>JavaScript</span>
                         <span>Vue</span>
                         <span>React</span>
-                        <span>Angular</span>
                     </div>
                 </div>
                 <div class="skills-box">
@@ -124,7 +117,6 @@
                     </div>
                     <div class="skills-list">
                         <span>PHP</span>
-                        <span>JAVA</span>
                         <span>Python</span>
                         <span>C++</span>
                     </div>
@@ -135,8 +127,6 @@
                     </div>
                     <div class="skills-list">
                         <span>MySQL</span>
-                        <span>PostgreSQL</span>
-                        <span>MongoDB</span>
                     </div>
                 </div>
             </div>
@@ -151,38 +141,56 @@
          <div class="timeline-container">
            <div class="timeline-item">
              <div class="timeline-dot"></div>
-             <div class="timeline-date">2023 - Present</div>
+             <div class="timeline-date">Nov 2023</div>
              <div class="timeline-content">
-               <h3>Senior Frontend Developer</h3>
-               <span>Awesome Tech Inc.</span>
-               <p>Leading the frontend team to build scalable web applications using modern frameworks and best practices.</p>
+               <h3>Completed First Semester</h3>
+               <span>Swinburne University of Technology</span>
+               <p>Achieved strong results in core programming and web development courses.</p>
              </div>
            </div>
            <div class="timeline-item">
              <div class="timeline-dot"></div>
-             <div class="timeline-date">2021 - 2023</div>
+             <div class="timeline-date">Feb 2024</div>
              <div class="timeline-content">
-               <h3>Frontend Developer</h3>
-               <span>Creative Studio</span>
-               <p>Developed interactive websites and collaborated with designers to deliver engaging user experiences.</p>
+               <h3>Joined Swinburne Coding Club</h3>
+               <span>Swinburne University of Technology</span>
+               <p>Became an active member, collaborating on group projects and participating in coding challenges.</p>
              </div>
            </div>
            <div class="timeline-item">
              <div class="timeline-dot"></div>
-             <div class="timeline-date">2019 - 2021</div>
+             <div class="timeline-date">May 2024</div>
              <div class="timeline-content">
-               <h3>Junior Web Developer</h3>
-               <span>Startup Hub</span>
-               <p>Worked on various client projects, focusing on responsive design and performance optimization.</p>
+               <h3>Launched Personal Portfolio Website</h3>
+               <span>Self-initiated Project</span>
+               <p>Created and published a portfolio website to showcase my projects and growing skill set.</p>
              </div>
            </div>
            <div class="timeline-item">
              <div class="timeline-dot"></div>
-             <div class="timeline-date">2017 - 2019</div>
+             <div class="timeline-date">Oct 2024 – Nov 2024</div>
              <div class="timeline-content">
-               <h3>Intern Web Developer</h3>
-               <span>Web Solutions</span>
-               <p>Assisted in building and maintaining websites, learning the fundamentals of web development.</p>
+               <h3>Plan Meditation Coach Bot <span style='font-size:0.9em; color:#888;'>(Planned)</span></h3>
+               <span>Planned Project</span>
+               <p>Planning and designing an interactive web app to guide users through meditation sessions, breathing exercises, and daily affirmations.</p>
+             </div>
+           </div>
+           <div class="timeline-item">
+             <div class="timeline-dot"></div>
+             <div class="timeline-date">Jan 2025 – Apr 2025</div>
+             <div class="timeline-content">
+               <h3>Developed Meditation Coach Bot</h3>
+               <span>Personal Project</span>
+               <p>Designed and built an interactive web app to guide users through meditation sessions, breathing exercises, and daily affirmations.</p>
+             </div>
+           </div>
+           <div class="timeline-item">
+             <div class="timeline-dot"></div>
+             <div class="timeline-date">Apr 2025 – Jun 2025</div>
+             <div class="timeline-content">
+               <h3>Developed Real Estate and AWE Electronics Projects</h3>
+               <span>Personal Projects</span>
+               <p>Worked on and completed a modern real estate website and an e-commerce platform for electronics, focusing on user experience and functionality.</p>
              </div>
            </div>
          </div>
@@ -196,47 +204,47 @@
           </div>
           <div class="project-container">
             <div class="project-card">
-                <img src="https://via.placeholder.com/400x200?text=Portfolio+1" alt="Portfolio 1 Screenshot" class="project-img">
+                <img src="assets/images/project1.png" alt="AWE Electronics Screenshot" class="project-img">
                 <div class="project-content">
                   <div class="project-header">
                     <h3>Portfolio-1</h3>
-                    <span>August 2023</span>
+                    <span>May 2025</span>
                   </div>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit autem soluta consequatur, sequi et sint laudantium non rem veritatis.</p>
-                  <a href="#" class="btn project-btn">View Live Demo</a>
+                  <p>AWE Electronics is a full-featured e-commerce website for electronics, offering a wide range of products and a seamless shopping experience.</p>
+                  <a href="http://awe-electronics.great-site.net" class="btn project-btn" target="_blank" rel="noopener">View Live Demo</a>
                 </div>
             </div>
             <div class="project-card">
-                <img src="https://via.placeholder.com/400x200?text=Portfolio+2" alt="Portfolio 2 Screenshot" class="project-img">
+                <img src="assets/images/project2.png" alt="Real Estate Website Screenshot" class="project-img">
                 <div class="project-content">
                   <div class="project-header">
                     <h3>Portfolio-2</h3>
-                    <span>August 2023</span>
+                    <span>April 2025</span>
                   </div>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit autem soluta consequatur, sequi et sint laudantium non rem veritatis.</p>
-                  <a href="#" class="btn project-btn">View Live Demo</a>
+                  <p>A modern real-estate website designed to showcase property listings, connect buyers and sellers, and provide an intuitive search experience.</p>
+                  <a href="https://silly-sunshine-e15d54.netlify.app/#/home" class="btn project-btn" target="_blank" rel="noopener">View Live Demo</a>
                 </div>
             </div>
             <div class="project-card">
-                <img src="https://via.placeholder.com/400x200?text=Portfolio+3" alt="Portfolio 3 Screenshot" class="project-img">
+                <img src="assets/images/project3.png" alt="Meditation Coach Bot Screenshot" class="project-img">
                 <div class="project-content">
                   <div class="project-header">
                     <h3>Portfolio-3</h3>
-                    <span>August 2023</span>
+                    <span>June 2025</span>
                   </div>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit autem soluta consequatur, sequi et sint laudantium non rem veritatis.</p>
-                  <a href="#" class="btn project-btn">View Live Demo</a>
+                  <p>Meditation Coach Bot is an interactive web app that guides users through meditation sessions, breathing exercises, and daily affirmations.</p>
+                  <a href="https://huyngocduong.github.io/Meditation-Coach-Bot/" class="btn project-btn" target="_blank" rel="noopener">View Live Demo</a>
                 </div>
             </div>
             <div class="project-card">
-                <img src="https://via.placeholder.com/400x200?text=Portfolio+4" alt="Portfolio 4 Screenshot" class="project-img">
+                <img src="assets/images/project4.png" alt="RGB Color Fusion Screenshot" class="project-img">
                 <div class="project-content">
                   <div class="project-header">
                     <h3>Portfolio-4</h3>
-                    <span>August 2023</span>
+                    <span>October 2024</span>
                   </div>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit autem soluta consequatur, sequi et sint laudantium non rem veritatis.</p>
-                  <a href="#" class="btn project-btn">View Live Demo</a>
+                  <p>A creative tool for generating and blending RGB color transitions, perfect for designers and developers seeking color inspiration.</p>
+                  <a href="https://huyngocduong.github.io/Color-Transition-Generator/" class="btn project-btn" target="_blank" rel="noopener">View Live Demo</a>
                 </div>
             </div>
           </div>
@@ -253,22 +261,24 @@
              <div class="col">
                 <div class="contact-info">
                     <h2>Find Me <i class="uil uil-corner-right-down"></i></h2>
-                    <p><i class="uil uil-envelope"></i> Email: john@doe.com</p>
-                    <p><i class="uil uil-phone"></i> Tel: +250 708 770 000</p>
+                    <p><i class="uil uil-envelope"></i> Email: ngochuyduongworkemail@gmail.com</p>
+                    <p><i class="uil uil-phone"></i> Tel: +61491264117</p>
                 </div>
              </div>
              <div class="col">
                 <div class="form-control">
-                    <div class="form-inputs">
-                        <input type="text" class="input-field" placeholder="Name">
-                        <input type="text" class="input-field" placeholder="Email">
-                    </div>
-                    <div class="text-area">
-                        <textarea placeholder="Message"></textarea>
-                    </div>
-                    <div class="form-button">
-                        <button class="btn">Send <i class="uil uil-message"></i></button>
-                    </div>
+                    <form action="https://formspree.io/f/xkgbnabl" method="POST" class="form-control">
+                        <div class="form-inputs">
+                            <input type="text" name="name" class="input-field" placeholder="Name" required>
+                            <input type="email" name="email" class="input-field" placeholder="Email" required>
+                        </div>
+                        <div class="text-area">
+                            <textarea name="message" placeholder="Message" required></textarea>
+                        </div>
+                        <div class="form-button">
+                            <button class="btn" type="submit">Send <i class="uil uil-message"></i></button>
+                        </div>
+                    </form>
                 </div>
              </div>
           </div>
@@ -280,7 +290,7 @@
     <!-- --------------- FOOTER --------------- -->
     <footer>
         <div class="top-footer">
-            <p>John Doe .</p>
+            <p>Huy Duong .</p>
         </div>
         <div class="middle-footer">
             <ul class="footer-menu">
@@ -299,13 +309,13 @@
             </ul>
         </div>
         <div class="footer-social-icons">
-            <div class="icon"><i class="uil uil-instagram"></i></div>
-            <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
-            <div class="icon"><i class="uil uil-dribbble"></i></div>
-            <div class="icon"><i class="uil uil-github-alt"></i></div>
+            <a href="https://www.linkedin.com/in/ngoc-huy-duong-b395902a9/" class="icon" target="_blank" rel="noopener"><i class="uil uil-linkedin-alt"></i></a>
+            <a href="https://github.com/HuyNgocDuong" class="icon" target="_blank" rel="noopener"><i class="uil uil-github-alt"></i></a>
+            <a href="https://discord.com/users/805994639348990003" class="icon" target="_blank" rel="noopener"><i class="uil uil-discord"></i></a>
+            <a href="https://www.facebook.com/ngoc.huy.duong.402989" class="icon" target="_blank" rel="noopener"><i class="uil uil-facebook-f"></i></a>
         </div>
         <div class="bottom-footer">
-            <p>Copyright &copy; <a href="#home" style="text-decoration: none;">John Doe</a> - All rights reserved</p>
+            <p>Copyright &copy; <a href="#home" style="text-decoration: none;">Huy Duong</a> - All rights reserved</p>
         </div>
     </footer>
 
